Moved target into it's own group box. Added buttons to copy vector3 and NPC object copy to clipboard. When someone click a textbox, the content of that textbox is copied to clipboard.

--- a/Beholder.csproj
+++ b/Beholder.csproj
@@ -121,6 +121,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="beholder.ico" />
+    <None Include="clipboard.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
